# Zephyr-ARTPi-Blink

./: .gitignore  CMakeLists.txt  LICENSE  README.md  prj.conf
boards/arm/artpi/: Kconfig  Kconfig.board  Kconfig.defconfig  artpi.dts  artpi.dtsi  artpi.yaml  artpi_defconfig  board.cmake
boards/arm/artpi/support/: openocd.cfg
src/: main.c
